Fix issue with SiteNav glitch when closing it before fully opened by changing z-index and removing width:auto

--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,6 +1,6 @@
 .navbar {
-	width: 8rem;
-	z-index: 10000;
+	// width: 8rem;
+	z-index: 1;
 	border-radius: $navbar__item-border-radius 0 0 $navbar__item-border-radius;
 	position: fixed;
 	top: $default-font-size * 0.625;
@@ -10,9 +10,9 @@
 	display: flex;
 	align-items: center;
 
-	&.navbar--active, &.navbar--isAnimating {
-		width: auto;
-	}
+	// &.navbar--isAnimating {
+	// 	width: auto;
+	// }
 
 	&__background {
 		position: fixed;
