--- a/sass/pages/_resume.scss
+++ b/sass/pages/_resume.scss
@@ -47,7 +47,6 @@
     padding: $default-font-size * 2 $default-font-size $default-font-size * 2;
   }
   &__card {
-    
     max-width: calc(100% - 19.2rem);
     width: $default-font-size * 50;
     margin: $default-font-size * 2 auto;
@@ -58,6 +57,7 @@
     border: 3px solid $color-primary-1;
     border-radius: $default-font-size * .5;
     box-shadow: 0 $default-font-size $default-font-size * 2 rgba($color-primary-4, .25);
+    z-index: 2;
   }
   & .heading {
     color: $color-primary-3;
