--- a/src/css/style.css
+++ b/src/css/style.css
@@ -643,8 +643,7 @@ body {
 }
 
 .navbar {
-  width: 8rem;
-  z-index: 10000;
+  z-index: 1;
   border-radius: 16rem 0 0 16rem;
   position: fixed;
   top: 1rem;
@@ -653,9 +652,6 @@ body {
   text-align: center;
   display: flex;
   align-items: center;
-}
-.navbar.navbar--active, .navbar.navbar--isAnimating {
-  width: auto;
 }
 .navbar__background {
   position: fixed;
@@ -962,6 +958,7 @@ body {
   border: 3px solid #28527a;
   border-radius: 0.8rem;
   box-shadow: 0 1.6rem 3.2rem rgba(251, 238, 172, 0.25);
+  z-index: 2;
 }
 .resume .heading {
   color: #f4d160;
